--- a/index.html
+++ b/index.html
@@ -1,349 +1,183 @@
 <!doctype html>
 <html lang="hu">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ukrán–orosz háború – térkép (DeepState timeline + hőpontok)</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Ukrajna háború – DeepState + műholdas hőpontok</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <style>
-    html, body { height: 100%; margin: 0; }
-    #map { height: 100%; }
+<style>
+html, body { height:100%; margin:0; }
+#map { height:100%; }
 
-    .panel {
-      position: absolute;
-      z-index: 1000;
-      top: 12px;
-      left: 12px;
-      right: 12px;
-      max-width: 860px;
-      background: rgba(255,255,255,0.95);
-      padding: 10px 12px;
-      border-radius: 10px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-      font: 13px/1.35 system-ui, -apple-system, Segoe UI, Roboto, Arial;
-    }
-    .muted { color:#555; font-size:12px; }
-    .row { display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-top:8px; }
-    .chip {
-      display:inline-flex; align-items:center; gap:8px;
-      background:#f2f2f2; padding:6px 10px; border-radius:999px; font-size:12px;
-    }
-    .btn {
-      border:0; border-radius:10px; padding:8px 10px;
-      background:#111; color:#fff; cursor:pointer; font-size:12px;
-    }
-    .btn:disabled { opacity: 0.5; cursor: not-allowed; }
-    select { padding: 6px 8px; border-radius: 10px; border: 1px solid #ddd; background: #fff; }
+.panel {
+ position:absolute;
+ z-index:1000;
+ top:12px;
+ left:12px;
+ background:white;
+ padding:12px;
+ border-radius:10px;
+ box-shadow:0 4px 16px rgba(0,0,0,0.2);
+ font-family:Arial;
+ width:420px;
+}
 
-    .slider-wrap {
-      display:flex;
-      gap:10px;
-      align-items:center;
-      width:100%;
-      margin-top:8px;
-    }
-    input[type="range"] { width: 100%; }
+.legend {
+ position:absolute;
+ bottom:20px;
+ left:12px;
+ z-index:1000;
+ background:white;
+ padding:10px;
+ border-radius:10px;
+ box-shadow:0 4px 16px rgba(0,0,0,0.2);
+ font-size:12px;
+}
 
-    .legend {
-      position: absolute;
-      bottom: 20px;
-      left: 12px;
-      z-index: 1000;
-      background: rgba(255,255,255,0.95);
-      padding: 10px;
-      border-radius: 10px;
-      font-size: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-      max-width: 360px;
-    }
-    .legend b { display:block; margin-bottom:6px; }
-    .legend .item { display:flex; align-items:center; gap:8px; margin:4px 0; }
-    .swatch { width:12px; height:12px; border-radius:3px; border:1px solid rgba(0,0,0,0.2); }
-
-    .log {
-      margin-top: 8px;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-      font-size: 12px;
-      white-space: pre-wrap;
-      background: #f6f6f6;
-      border-radius: 8px;
-      padding: 8px;
-      max-height: 120px;
-      overflow: auto;
-    }
-  </style>
+.log {
+ margin-top:8px;
+ font-size:12px;
+ background:#f3f3f3;
+ padding:6px;
+ border-radius:6px;
+ height:100px;
+ overflow:auto;
+}
+</style>
 </head>
 
 <body>
-  <div id="map"></div>
 
-  <div class="panel">
-    <b>Ukrán–orosz háború – DeepState frontvonal (timeline) + műholdas hőpontok</b><br>
-    <span class="muted">
-      A “Hőpontok” réteg NASA GIBS (Thermal Anomalies/Fire) napi raszter overlay. Nem minden hőpont harci esemény (lehet mezőgazdasági/erdőtűz),
-      de OSINT-ben jó proxy.
-    </span>
+<div id="map"></div>
 
-    <div class="row">
-      <label class="chip">
-        <input id="toggleDeepState" type="checkbox" checked />
-        DeepState réteg
-      </label>
+<div class="panel">
+<b>Ukrajna háborús térkép</b><br>
 
-      <label class="chip">
-        <input id="toggleFires" type="checkbox" checked />
-        Hőpontok (GIBS)
-      </label>
+<label><input type="checkbox" id="toggleDeepState" checked> Frontvonal</label><br>
+<label><input type="checkbox" id="toggleFires" checked> Műholdas hőpontok</label><br>
 
-      <button id="zoomBtn" class="btn" type="button">Rázoomolás</button>
+Dátum: <span id="dateLabel">...</span><br>
 
-      <span class="chip">Dátum: <b id="dateLabel">…</b></span>
-      <span class="chip">Fájl: <span id="fileLabel">…</span></span>
+<input id="daySlider" type="range" min="0" max="0" value="0" step="1" style="width:100%">
 
-      <span class="chip">
-        Sebesség:
-        <select id="speedSel">
-          <option value="300" selected>0.3s</option>
-          <option value="600">0.6s</option>
-          <option value="1200">1.2s</option>
-          <option value="2000">2.0s</option>
-        </select>
-      </span>
+<div class="log" id="log">Indul...</div>
+</div>
 
-      <span class="chip">
-        Szenzor:
-        <select id="sensorSel">
-          <option value="VIIRS_SNPP_Thermal_Anomalies_375m_All" selected>VIIRS (375m)</option>
-          <option value="MODIS_Terra_Thermal_Anomalies_All">MODIS Terra</option>
-          <option value="MODIS_Aqua_Thermal_Anomalies_All">MODIS Aqua</option>
-        </select>
-      </span>
+<div class="legend">
+<b>Jelmagyarázat</b><br>
+■ Frontvonal / megszállt terület<br>
+■ Hőpont = robbanás / tűz / csapás (műhold)
+</div>
 
-      <span class="chip">
-        Hőpont áttetszőség:
-        <input id="opacityRange" type="range" min="0" max="100" value="55" step="1" />
-      </span>
-    </div>
+<script>
 
-    <div class="slider-wrap">
-      <button id="playBtn" class="btn" type="button" disabled>Lejátszás</button>
-      <input id="daySlider" type="range" min="0" max="0" value="0" step="1" disabled />
-    </div>
+const log = msg => document.getElementById("log").textContent += "\n"+msg;
+const dateLabel = document.getElementById("dateLabel");
+const slider = document.getElementById("daySlider");
 
-    <div id="log" class="log">Indul…</div>
-  </div>
+let deepLayer = null;
+let fireLayer = null;
+let dates = [];
+let currentDate = null;
 
-  <div class="legend">
-    <b>Jelmagyarázat</b>
-    <div class="item"><span class="swatch" style="background:#6b0000;"></span>Orosz ellenőrzés / megszállt terület (poligon kitöltés)</div>
-    <div class="item"><span class="swatch" style="background:#d00;"></span>Frontvonal / határ (poligon kontúr)</div>
-    <div class="item"><span class="swatch" style="background:#ff5a00;"></span>Hőpontok (műholdas thermal anomalies) – napi réteg</div>
-  </div>
+const map = L.map('map').setView([48.8,31.5],6);
 
-  <script>
-    const logEl = document.getElementById('log');
-    const dateLabel = document.getElementById('dateLabel');
-    const fileLabel = document.getElementById('fileLabel');
-    const slider = document.getElementById('daySlider');
-    const playBtn = document.getElementById('playBtn');
-    const zoomBtn = document.getElementById('zoomBtn');
-    const toggle = document.getElementById('toggleDeepState');
-    const toggleFires = document.getElementById('toggleFires');
-    const speedSel = document.getElementById('speedSel');
-    const sensorSel = document.getElementById('sensorSel');
-    const opacityRange = document.getElementById('opacityRange');
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+ attribution:'OSM'
+}).addTo(map);
 
-    function log(msg) { logEl.textContent += "\n" + msg; }
+async function loadJSON(url){
+ const r = await fetch(url);
+ if(!r.ok) throw new Error("HTTP "+r.status);
+ return await r.json();
+}
 
-    const map = L.map('map').setView([49.0, 31.0], 6);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; OpenStreetMap'
-    }).addTo(map);
+function renderDeepState(data){
+ if(deepLayer) map.removeLayer(deepLayer);
 
-    let deepStateLayer = null;
-    let firesLayer = null;
+ deepLayer = L.geoJSON(data,{
+   style:{
+     color:"#d00",
+     weight:2,
+     fillColor:"#6b0000",
+     fillOpacity:0.3
+   }
+ });
 
-    let dates = [];
-    let playing = false;
-    let timer = null;
-    let currentDate = null; // YYYY-MM-DD
+ if(document.getElementById("toggleDeepState").checked)
+   deepLayer.addTo(map);
+}
 
-    function setLayerVisible(layer, visible) {
-      if (!layer) return;
-      if (visible) layer.addTo(map);
-      else map.removeLayer(layer);
-    }
+function loadFireLayer(date){
 
-    toggle.addEventListener('change', () => setLayerVisible(deepStateLayer, toggle.checked));
-    toggleFires.addEventListener('change', () => setLayerVisible(firesLayer, toggleFires.checked));
+ const url =
+ `https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/VIIRS_SNPP_Thermal_Anomalies_375m_All/default/${date}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.png`;
 
-    zoomBtn.addEventListener('click', () => {
-      if (!deepStateLayer) return;
-      const b = deepStateLayer.getBounds();
-      if (b && b.isValid && b.isValid()) map.fitBounds(b.pad(0.12));
-    });
+ if(fireLayer) map.removeLayer(fireLayer);
 
-    function stopPlay() {
-      playing = false;
-      playBtn.textContent = "Lejátszás";
-      if (timer) { clearInterval(timer); timer = null; }
-    }
+ fireLayer = L.tileLayer(url,{
+   opacity:0.65,
+   attribution:"NASA GIBS"
+ });
 
-    function stepOnce() {
-      let v = Number(slider.value);
-      if (v >= Number(slider.max)) v = Number(slider.min);
-      else v += 1;
-      slider.value = String(v);
-      loadByIndex(v, false);
-    }
+ if(document.getElementById("toggleFires").checked)
+   fireLayer.addTo(map);
+}
 
-    function startPlay() {
-      playing = true;
-      playBtn.textContent = "Megállítás";
-      const intervalMs = Number(speedSel.value) || 300;
-      timer = setInterval(stepOnce, intervalMs);
-    }
+async function loadDate(index){
+ const item = dates[index];
+ if(!item) return;
 
-    playBtn.addEventListener('click', () => {
-      if (playing) stopPlay();
-      else startPlay();
-    });
+ currentDate = item.date;
+ dateLabel.textContent = item.date;
 
-    speedSel.addEventListener('change', () => {
-      if (!playing) return;
-      stopPlay();
-      startPlay();
-    });
+ try{
+   const data = await loadJSON(item.raw);
+   renderDeepState(data);
+   loadFireLayer(item.date);
+ }catch(e){
+   log("Hiba: "+e);
+ }
+}
 
-    async function loadJson(url) {
-      const res = await fetch(url, { cache: "no-store" });
-      if (!res.ok) throw new Error("HTTP " + res.status + " " + res.statusText);
-      return await res.json();
-    }
+async function init(){
+ try{
+   const idx = await loadJSON("./data/deepstate_dates.json");
+   dates = idx;
 
-    function renderDeepState(data) {
-      if (deepStateLayer) {
-        map.removeLayer(deepStateLayer);
-        deepStateLayer = null;
-      }
+   slider.max = dates.length-1;
+   slider.value = dates.length-1;
 
-      deepStateLayer = L.geoJSON(data, {
-        style: () => ({
-          color: "#d00",
-          weight: 2.2,
-          opacity: 0.95,
-          fillColor: "#6b0000",
-          fillOpacity: 0.28
-        })
-      });
+   slider.oninput = ()=> loadDate(slider.value);
 
-      if (toggle.checked) deepStateLayer.addTo(map);
-    }
+   loadDate(slider.value);
 
-    // --- NASA GIBS daily tiles (no key), date-driven ---
-    function gibsTemplate(layerName, dateStr) {
-      // EPSG:3857 "GoogleMapsCompatible" matrix set; best endpoint
-      // Date must be YYYY-MM-DD
-      return `https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/${layerName}/default/${dateStr}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.png`;
-    }
+   log("Kész ✔");
 
-    function ensureFiresLayer() {
-      const layerName = sensorSel.value;
-      const dateStr = currentDate || new Date().toISOString().slice(0,10);
-      const tpl = gibsTemplate(layerName, dateStr);
+ }catch(e){
+   log("Init hiba "+e);
+ }
+}
 
-      if (!firesLayer) {
-        firesLayer = L.tileLayer(tpl, {
-          maxZoom: 9,   // GIBS Level9
-          opacity: Number(opacityRange.value) / 100,
-          attribution: "NASA GIBS (Thermal Anomalies/Fire)"
-        });
-        if (toggleFires.checked) firesLayer.addTo(map);
-        return;
-      }
-      firesLayer.setUrl(tpl);
-    }
+document.getElementById("toggleDeepState").onchange=()=>{
+ if(deepLayer){
+   if(toggleDeepState.checked) deepLayer.addTo(map);
+   else map.removeLayer(deepLayer);
+ }
+};
 
-    function setFiresDate(dateStr) {
-      currentDate = dateStr;
+document.getElementById("toggleFires").onchange=()=>{
+ if(fireLayer){
+   if(toggleFires.checked) fireLayer.addTo(map);
+   else map.removeLayer(fireLayer);
+ }
+};
 
-      // GIBS néha 1-2 nappal csúszik, de a legtöbb nap működik.
-      // Itt csak átállítjuk az URL-t.
-      ensureFiresLayer();
-    }
+init();
 
-    opacityRange.addEventListener('input', () => {
-      if (!firesLayer) return;
-      firesLayer.setOpacity(Number(opacityRange.value) / 100);
-    });
-
-    sensorSel.addEventListener('change', () => {
-      // új layer névvel frissítjük
-      ensureFiresLayer();
-    });
-
-    async function loadByIndex(i, doZoom = true) {
-      const item = dates[i];
-      if (!item) return;
-
-      currentDate = item.date;
-      dateLabel.textContent = item.date;
-      fileLabel.textContent = item.name;
-
-      try {
-        // DeepState polygon
-        const data = await loadJson(item.raw);
-        renderDeepState(data);
-
-        // Fires overlay date sync
-        setFiresDate(item.date);
-
-        if (doZoom && deepStateLayer) {
-          const b = deepStateLayer.getBounds();
-          if (b && b.isValid && b.isValid()) map.fitBounds(b.pad(0.12));
-        }
-      } catch (e) {
-        log("HIBA: " + String(e && e.stack ? e.stack : e));
-        stopPlay();
-      }
-    }
-
-    async function init() {
-      try {
-        log("Fetch: ./data/deepstate_dates.json");
-        const idx = await loadJson('./data/deepstate_dates.json');
-        dates = Array.isArray(idx) ? idx : [];
-        log("Dates: " + dates.length);
-        if (dates.length === 0) throw new Error("Üres deepstate_dates.json");
-
-        slider.min = "0";
-        slider.max = String(dates.length - 1);
-        slider.value = String(dates.length - 1);
-        slider.disabled = false;
-        playBtn.disabled = false;
-
-        slider.addEventListener('input', () => {
-          stopPlay();
-          loadByIndex(Number(slider.value), false);
-        });
-
-        // induljunk a legfrissebbel
-        await loadByIndex(dates.length - 1, true);
-
-        // biztosan legyen fires layer inicializálva
-        ensureFiresLayer();
-
-        log("Kész ✔ (DeepState + Hőpontok)");
-      } catch (e) {
-        log("HIBA init: " + String(e && e.stack ? e.stack : e));
-      }
-    }
-
-    init();
-  </script>
+</script>
 </body>
 </html>
