--- a/index.html
+++ b/index.html
@@ -1,360 +1,163 @@
 <!doctype html>
 <html lang="hu">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ukrán–orosz háború – DeepState timeline + hőpontok</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Ukrajna háborús térkép – FIRMS + DeepState</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <style>
-    html, body { height: 100%; margin: 0; }
-    #map { height: 100%; }
+<style>
+html,body{height:100%;margin:0;}
+#map{height:100%;}
 
-    .panel {
-      position: absolute;
-      z-index: 1000;
-      top: 12px;
-      left: 12px;
-      right: 12px;
-      max-width: 760px;
-      background: rgba(255,255,255,0.95);
-      padding: 12px;
-      border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-      font: 13px/1.35 system-ui, -apple-system, Segoe UI, Roboto, Arial;
-    }
+.panel{
+position:absolute;top:12px;left:12px;right:12px;max-width:760px;
+background:white;padding:12px;border-radius:12px;
+box-shadow:0 4px 16px rgba(0,0,0,.2);font-family:Arial;z-index:1000;
+}
 
-    .title { font-size: 14px; font-weight: 700; }
-    .muted { color:#555; font-size:12px; margin-top:4px; }
-
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      align-items: center;
-      margin-top: 10px;
-    }
-
-    .chip {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      background: #f2f2f2;
-      padding: 7px 10px;
-      border-radius: 999px;
-      font-size: 12px;
-      max-width: 100%;
-    }
-
-    .chip b { font-weight: 700; }
-
-    .btn {
-      border: 0;
-      border-radius: 10px;
-      padding: 8px 10px;
-      background: #111;
-      color: #fff;
-      cursor: pointer;
-      font-size: 12px;
-    }
-    .btn:disabled { opacity: 0.5; cursor: not-allowed; }
-
-    select {
-      padding: 6px 8px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-      background: #fff;
-      font-size: 12px;
-    }
-
-    .slider-wrap {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-top: 10px;
-    }
-
-    input[type="range"] { width: 100%; }
-
-    .legend {
-      position: absolute;
-      bottom: 20px;
-      left: 12px;
-      z-index: 1000;
-      background: rgba(255,255,255,0.95);
-      padding: 10px 12px;
-      border-radius: 12px;
-      font-size: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-      max-width: 360px;
-    }
-
-    .legend b { display:block; margin-bottom:6px; }
-    .legend .item { display:flex; align-items:center; gap:8px; margin:4px 0; }
-    .swatch { width:12px; height:12px; border-radius:3px; border:1px solid rgba(0,0,0,0.2); }
-
-    .log {
-      margin-top: 10px;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-      font-size: 12px;
-      white-space: pre-wrap;
-      background: #f6f6f6;
-      border-radius: 10px;
-      padding: 8px;
-      max-height: 120px;
-      overflow: auto;
-    }
-  </style>
+.row{display:flex;flex-wrap:wrap;gap:10px;margin-top:8px;}
+.legend{position:absolute;bottom:20px;left:12px;background:white;padding:10px;border-radius:10px;box-shadow:0 4px 16px rgba(0,0,0,.2);font-size:12px;}
+.log{margin-top:8px;background:#f3f3f3;padding:6px;border-radius:6px;height:110px;overflow:auto;font-size:12px;}
+</style>
 </head>
 
 <body>
-  <div id="map"></div>
 
-  <div class="panel">
-    <div class="title">Ukrán–orosz háború – DeepState timeline + műholdas hőpontok</div>
-    <div class="muted">
-      Hőpont réteg: NASA GIBS “Thermal Anomalies/Fire” (VIIRS/MODIS). Napi overlay, dátumhoz szinkronizálva.
-      Ha nem látszik, nagyíts rá (8–9 zoom) vagy válts szenzort.
-    </div>
+<div id="map"></div>
 
-    <div class="row">
-      <label class="chip"><input id="toggleDeepState" type="checkbox" checked> Frontvonal</label>
-      <label class="chip"><input id="toggleFires" type="checkbox" checked> Hőpontok</label>
+<div class="panel">
+<b>Ukrajna – háborús dashboard</b><br>
 
-      <button id="zoomBtn" class="btn" type="button">Rázoomolás</button>
+<label><input type="checkbox" id="toggleDeep" checked> Frontvonal</label>
+<label><input type="checkbox" id="toggleFirms" checked> FIRMS hőpontok</label>
+<label><input type="checkbox" id="toggleGibs"> NASA hőtérkép (overlay)</label>
 
-      <span class="chip">Dátum: <b id="dateLabel">…</b></span>
-      <span class="chip">Fájl: <span id="fileLabel">…</span></span>
+<br><br>
 
-      <span class="chip">
-        Sebesség:
-        <select id="speedSel">
-          <option value="300" selected>0.3s</option>
-          <option value="600">0.6s</option>
-          <option value="1200">1.2s</option>
-          <option value="2000">2.0s</option>
-        </select>
-      </span>
+Dátum: <span id="dateLabel">...</span>
 
-      <span class="chip">
-        Szenzor:
-        <select id="sensorSel">
-          <option value="VIIRS_SNPP_Thermal_Anomalies_375m_All" selected>VIIRS (375m)</option>
-          <option value="MODIS_Terra_Thermal_Anomalies_All">MODIS Terra</option>
-          <option value="MODIS_Aqua_Thermal_Anomalies_All">MODIS Aqua</option>
-        </select>
-      </span>
+<input id="slider" type="range" min="0" max="0" step="1" style="width:100%">
 
-      <span class="chip">
-        Hőpont áttetszőség:
-        <input id="opacityRange" type="range" min="0" max="100" value="60" step="1" />
-      </span>
-    </div>
+<div class="log" id="log">Indul...</div>
+</div>
 
-    <div class="slider-wrap">
-      <button id="playBtn" class="btn" type="button" disabled>Lejátszás</button>
-      <input id="daySlider" type="range" min="0" max="0" value="0" step="1" disabled />
-    </div>
-
-    <div id="log" class="log">Indul…</div>
-  </div>
-
-  <div class="legend">
-    <b>Jelmagyarázat</b>
-    <div class="item"><span class="swatch" style="background:#6b0000;"></span>Orosz ellenőrzés / megszállt terület (kitöltés)</div>
-    <div class="item"><span class="swatch" style="background:#d00;"></span>Frontvonal / határ (kontúr)</div>
-    <div class="item"><span class="swatch" style="background:#ff5a00;"></span>Műholdas hőpontok (thermal anomalies)</div>
-  </div>
+<div class="legend">
+<b>Jelmagyarázat</b><br>
+■ Frontvonal<br>
+● Hőpont (műhold detektált tűz / robbanás)
+</div>
 
 <script>
-  const logEl = document.getElementById('log');
-  const dateLabel = document.getElementById('dateLabel');
-  const fileLabel = document.getElementById('fileLabel');
-  const slider = document.getElementById('daySlider');
-  const playBtn = document.getElementById('playBtn');
-  const zoomBtn = document.getElementById('zoomBtn');
-  const toggleDeep = document.getElementById('toggleDeepState');
-  const toggleFires = document.getElementById('toggleFires');
-  const speedSel = document.getElementById('speedSel');
-  const sensorSel = document.getElementById('sensorSel');
-  const opacityRange = document.getElementById('opacityRange');
 
-  function log(msg){ logEl.textContent += "\n" + msg; }
+const FIRMS_MAP_KEY = "44b266fd8324db5a0a9866017429dc43";
 
-  const map = L.map('map').setView([49.0, 31.0], 6);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; OpenStreetMap'
-  }).addTo(map);
+const log = m => document.getElementById("log").textContent += "\n"+m;
+const map = L.map('map').setView([48.8,31.5],6);
 
-  let deepLayer = null;
-  let firesLayer = null;
-  let dates = [];
-  let playing = false;
-  let timer = null;
-  let currentDate = null;
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
 
-  function setVisible(layer, on){
-    if(!layer) return;
-    if(on) layer.addTo(map);
-    else map.removeLayer(layer);
-  }
+let deepLayer=null;
+let firmsLayer=null;
+let gibsLayer=null;
+let dates=[];
 
-  toggleDeep.addEventListener('change', () => setVisible(deepLayer, toggleDeep.checked));
-  toggleFires.addEventListener('change', () => setVisible(firesLayer, toggleFires.checked));
+async function loadJSON(u){
+const r=await fetch(u);
+if(!r.ok)throw new Error(r.status);
+return await r.json();
+}
 
-  zoomBtn.addEventListener('click', () => {
-    if (!deepLayer) return;
-    const b = deepLayer.getBounds();
-    if (b && b.isValid && b.isValid()) map.fitBounds(b.pad(0.12));
-  });
+function renderDeep(data){
+if(deepLayer)map.removeLayer(deepLayer);
+deepLayer=L.geoJSON(data,{style:{color:"#d00",weight:2,fillColor:"#6b0000",fillOpacity:0.3}});
+if(toggleDeep.checked)deepLayer.addTo(map);
+}
 
-  function stopPlay(){
-    playing = false;
-    playBtn.textContent = "Lejátszás";
-    if(timer){ clearInterval(timer); timer = null; }
-  }
+async function loadFIRMS(date){
 
-  function stepOnce(){
-    let v = Number(slider.value);
-    if(v >= Number(slider.max)) v = Number(slider.min);
-    else v += 1;
-    slider.value = String(v);
-    loadByIndex(v, false);
-  }
+if(!FIRMS_MAP_KEY || FIRMS_MAP_KEY==="IDE_IRD_BE_A_KULCSOT"){
+log("NINCS FIRMS KEY");
+return;
+}
 
-  function startPlay(){
-    playing = true;
-    playBtn.textContent = "Megállítás";
-    const ms = Number(speedSel.value) || 300;
-    timer = setInterval(stepOnce, ms);
-  }
+// Ukrajna bounding box
+const bbox="22,44,40,53";
 
-  playBtn.addEventListener('click', () => {
-    if(playing) stopPlay();
-    else startPlay();
-  });
+const url=`https://firms.modaps.eosdis.nasa.gov/api/area/csv/${FIRMS_MAP_KEY}/VIIRS_SNPP_NRT/${bbox}/1/${date}`;
 
-  speedSel.addEventListener('change', () => {
-    if(!playing) return;
-    stopPlay(); startPlay();
-  });
+try{
 
-  async function loadJson(url){
-    const r = await fetch(url, { cache:"no-store" });
-    if(!r.ok) throw new Error("HTTP " + r.status + " " + r.statusText);
-    return await r.json();
-  }
+const res=await fetch(url);
+const txt=await res.text();
 
-  function renderDeepState(data){
-    if(deepLayer){ map.removeLayer(deepLayer); deepLayer = null; }
-    deepLayer = L.geoJSON(data, {
-      style: () => ({
-        color:"#d00",
-        weight:2.2,
-        opacity:0.95,
-        fillColor:"#6b0000",
-        fillOpacity:0.28
-      })
-    });
-    if(toggleDeep.checked) deepLayer.addTo(map);
-  }
+const rows=txt.split("\n").slice(1);
 
-  function gibsUrl(layerName, dateStr){
-    // IMPORTANT: Level8/9 tiling; Layer appears mostly at higher zoom.
-    return `https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/${layerName}/default/${dateStr}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.png`;
-  }
+if(firmsLayer)map.removeLayer(firmsLayer);
 
-  function ensureFiresLayer(){
-    const layerName = sensorSel.value;
-    const dateStr = currentDate || new Date().toISOString().slice(0,10);
-    const url = gibsUrl(layerName, dateStr);
+firmsLayer=L.layerGroup();
 
-    if(!firesLayer){
-      firesLayer = L.tileLayer(url, {
-        maxZoom: 19,           // Leaflet oldalról lehet 19
-        maxNativeZoom: 9,      // de a GIBS tile Level9-ig van
-        opacity: Number(opacityRange.value)/100,
-        attribution: "NASA GIBS (Thermal Anomalies/Fire)"
-      });
-      if(toggleFires.checked) firesLayer.addTo(map);
-      return;
-    }
+rows.forEach(r=>{
+const c=r.split(",");
+if(c.length<6)return;
 
-    firesLayer.setUrl(url);
-  }
+const lat=parseFloat(c[0]);
+const lon=parseFloat(c[1]);
+const bright=c[2];
+const acq=c[5];
 
-  function setFiresDate(dateStr){
-    currentDate = dateStr;
-    ensureFiresLayer();
-  }
+const m=L.circleMarker([lat,lon],{
+radius:4,
+color:"#ff5500",
+fillOpacity:.7
+}).bindPopup(`Hőpont<br>Idő:${acq}<br>Hő:${bright}`);
 
-  opacityRange.addEventListener('input', () => {
-    if(!firesLayer) return;
-    firesLayer.setOpacity(Number(opacityRange.value)/100);
-  });
+firmsLayer.addLayer(m);
+});
 
-  sensorSel.addEventListener('change', () => {
-    ensureFiresLayer();
-  });
+if(toggleFirms.checked)firmsLayer.addTo(map);
 
-  async function loadByIndex(i, doZoom=true){
-    const item = dates[i];
-    if(!item) return;
+}catch(e){log("FIRMS hiba "+e);}
 
-    currentDate = item.date;
-    dateLabel.textContent = item.date;
-    fileLabel.textContent = item.name;
+}
 
-    try{
-      const data = await loadJson(item.raw);
-      renderDeepState(data);
+function loadGIBS(date){
+const url=`https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/VIIRS_SNPP_Thermal_Anomalies_375m_All/default/${date}/GoogleMapsCompatible_Level9/{z}/{y}/{x}.png`;
+if(gibsLayer)map.removeLayer(gibsLayer);
+gibsLayer=L.tileLayer(url,{opacity:.6,maxNativeZoom:9});
+if(toggleGibs.checked)gibsLayer.addTo(map);
+}
 
-      // sync fires
-      setFiresDate(item.date);
+async function loadDate(i){
+const item=dates[i];
+if(!item)return;
 
-      if(doZoom && deepLayer){
-        const b = deepLayer.getBounds();
-        if(b && b.isValid && b.isValid()) map.fitBounds(b.pad(0.12));
-      }
-    }catch(e){
-      log("HIBA: " + String(e && e.stack ? e.stack : e));
-      stopPlay();
-    }
-  }
+document.getElementById("dateLabel").textContent=item.date;
 
-  async function init(){
-    try{
-      log("Fetch: ./data/deepstate_dates.json");
-      const idx = await loadJson("./data/deepstate_dates.json");
-      dates = Array.isArray(idx) ? idx : [];
-      log("Dates: " + dates.length);
-      if(dates.length === 0) throw new Error("Üres deepstate_dates.json");
+const data=await loadJSON(item.raw);
+renderDeep(data);
+loadFIRMS(item.date);
+loadGIBS(item.date);
+}
 
-      slider.min = "0";
-      slider.max = String(dates.length - 1);
-      slider.value = String(dates.length - 1);
-      slider.disabled = false;
-      playBtn.disabled = false;
+async function init(){
+try{
+dates=await loadJSON("./data/deepstate_dates.json");
+slider.max=dates.length-1;
+slider.value=dates.length-1;
+slider.oninput=()=>loadDate(slider.value);
+loadDate(slider.value);
+}catch(e){log(e);}
+}
 
-      slider.addEventListener('input', () => {
-        stopPlay();
-        loadByIndex(Number(slider.value), false);
-      });
+toggleDeep.onchange=()=>deepLayer&& (toggleDeep.checked?deepLayer.addTo(map):map.removeLayer(deepLayer));
+toggleFirms.onchange=()=>firmsLayer&& (toggleFirms.checked?firmsLayer.addTo(map):map.removeLayer(firmsLayer));
+toggleGibs.onchange=()=>gibsLayer&& (toggleGibs.checked?gibsLayer.addTo(map):map.removeLayer(gibsLayer));
 
-      await loadByIndex(dates.length - 1, true);
-      ensureFiresLayer();
+init();
 
-      log("Tipp: hőpontok főleg 8–9 zoomnál látszanak, és néha 1-2 nap csúszás van a publikálásban.");
-      log("Kész ✔");
-    }catch(e){
-      log("INIT HIBA: " + String(e && e.stack ? e.stack : e));
-    }
-  }
-
-  init();
 </script>
 </body>
 </html>
